# adl

./: .gitignore  AGENTS.md  README.md  README.rst  pyproject.toml
developer/2026-07-03-adept-integration/: plan.md  tickets.md
developer/2026-07-03-improvement/: review.md  tickets.md
src/: spike_adept_deflate.py  spike_adept_probe.py  spike_adept_types.py  spike_adept_verify.py  spike_adept_xhtml.py
src/adl/: __init__.py  account.py  adept.py  api_call.py  bom.py  cli.py  crypto.py  db.py  device.py  epub_get.py  login.py  patch_epub.py  utils.py  xml_tools.py
src/adl/obok/: __init__.py  cli.py  crypto.py  models.py
tests/: context.py  test_adept_cli.py  test_adept_decrypt_file.py  test_adept_decrypt_key.py  test_adept_extract.py  test_adept_keyload.py  test_adept_pipeline.py  test_device.py  test_get.py  test_login.py  test_obok_cli.py  test_obok_crypto.py  test_obok_models.py  test_signature.py  test_timeout.py  test_utils.py
