[project]
name = "adl"
version = "0.1.0"
description = "Download ebooks from Adobe ACSM files."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
dependencies = [
  "cryptography>=3.1.0",
  "httpx>=0.28",
  "lxml>=4.0",
  "pycryptodomex>=3.0,<4",
]

[project.scripts]
adl = "adl.cli:main"
obok = "adl.obok.cli:main"
adl-decode = "adl.adept:main"

[dependency-groups]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.15.20",
  "ty>=0.0.56",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
